# 425ppm-journaliste-sourcing

./: .gitignore  AUDIT_PRODUIT_425PPM.md  PRD_REVIEW_AND_PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_phase3_ai_columns.py  003_addendum_v1_bad_buzz_drop_twitter.py  003_addendum_v1_bad_buzz_risk.py  004_fix_missing_columns.py  005_fix_notes_body.py  005_fix_notes_body_column.py
backend/app/: auth.py  config.py  database.py  main.py  schemas.py  tasks.py  worker.py
backend/app/models/: __init__.py  audit_log.py  campaign.py  client.py  content.py  journalist.py  list.py  note.py  pitch_match.py  prompt_version.py  user.py
backend/app/routers/: ai.py  auth.py  campaigns.py  clients.py  csv_io.py  dashboard.py  enrichment.py  extension.py  health.py  journalists.py  lists.py  notes.py
backend/app/services/: ai_prompts.py  article_extractor.py  audit.py  brave_search.py  cache.py  circuit_breaker.py  dropcontact.py  llm.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_ai.py  test_clients_campaigns_lists.py  test_csv.py  test_dashboard.py  test_enrichment.py  test_extension.py  test_health.py  test_journalists.py  test_notes.py
extension/: .gitignore  background.js  build.mjs  content.css  content.js  manifest.json  package-lock.json  package.json  sidepanel.html  sidepanel.js  tsconfig.json
extension/src/: api.ts  (+5 more)
frontend/: package-lock.json  package.json
(+18 files in other folders)
